style.css linked in all pages, some elements working
We've applied CSS to several elements now using two classes, which are
".header" and ".main-paragraph". Easy enough, probably won't get to
styling the whole thing today, but we're now motoring down the right
track.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 .main-paragraph {
     color: blue;
+    font-size: larger;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.header {
+    color: blue;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: x-large;
+    text-align: center;
 }
