Added some img css, but it don't work yet
I went with a type selector for this, so that it would apply the same
properties to each image, but it ain't workin yet. Will figure this out
though.

--- a/style.css
+++ b/style.css
@@ -5,10 +5,16 @@
     text-indent: 40px;
 }
 
-.header {
+.minor-header {
     color: green;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: x-large;
     text-align: center;
     
+}
+
+img {
+    width: 500px
+    height: 500px
+    float: 50%
 }
