Images work, but need more. Also, background color
The images work. They're positioned correctly and are now responded to
CSS code, but there are some kinks to sort out with their dimensions
which may need more CSS selectors to sort out.

As a final spin to this project, I want to see if I can get some
background colors working for the page, on a gradient as well. Seems
like a way to push a little outside the bounds of what I've been
asked to do, so I can make further progress.

--- a/style.css
+++ b/style.css
@@ -19,15 +19,22 @@
     font-size: xx-large;
     text-align: center;
 }
-/* This img selector is not implementing the properties and only god knows why.
-- Tried using an ID selector to get around specificity, but I have the same problem
-- Other selectors implement their properties just fine.
--  */
 
 img {
     image-rendering: auto;   
-    width: 500px;
+    width: 400px;
     height: 350px;
-    float: calc(50);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+.gradient {
+    height: 100px;
+    background-color: red;
+    background-image:
+      linear-gradient(
+        to right, 
+        red, #f06d06
+      );
+}
